# ghostvault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ghostvault/: __init__.py  cli.py  crypto.py  vault.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_vault.py
