[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostvault"
version = "0.1.0"
description = "A key management system with envelope encryption: keys, rotation, DEK/KEK envelope crypto, sealed secrets, and an audit log."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["kms", "encryption", "envelope-encryption", "key-management", "security", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ghostvault = "ghostvault.cli:main"

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostvault"
Repository = "https://github.com/joemunene-by/ghostvault"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: Typer relies on function calls (typer.Option/Argument) in argument
# defaults to declare CLI parameters; this is the documented idiom.
ignore = ["B008"]
